# insurance-claim-openenv

./: .gitignore  Dockerfile  FEEDBACK_GUIDE.md  LICENSE  README.md  app.py  baseline_inference.py  claim_assessor.py  claim_pipeline.py  claims_history.json  env.py  feedback_cli.py  feedback_handler.py  fraud_detector.py  inference.py  insurer_policy_loader.py  memory.json  openenv.yaml  openenv_api.py  openenv_core.py  pdf_utils.py  pyproject.toml  requirements.txt  ui.py
policy Criterias/: hdfc_ergo_criteria.json  policy_criteria_template.json  star_health_criteria.json
server/: app.py
tests/: test_openenv_core.py
