[project]
name = "insurance-claim-openenv"
version = "1.0.0"
description = "OpenEnv-compatible insurance claim adjudication environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Insurance Claim AI Team" }
]
dependencies = [
  "openenv-core>=0.2.0",
  "openai",
  "PyPDF2",
  "python-dotenv",
  "gradio",
  "fastapi",
  "uvicorn"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
